# AIFE_GEN-MLOps_Platform

./: Dockerfile.autogluon  Multimodal.ipynb  README.en.md  README.jp.md  README.md  Tabular.ipynb  TimeSeries.ipynb  main.py  pyproject.toml  test.ipynb
demo/.ipynb_checkpoints/: agent-checkpoint.py
pocket/: __init__.py  utils.py
