[project]
name = "vu-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "deepagents>=0.4.7",
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "lab>=8.9",
    "langfuse==2.59.3",
    "redis>=7.3.0",
]
